Import changes from https://github.com/eddieantonio/klc-programming-with-ruby/tree/tweaks

--- a/slides-en.html
+++ b/slides-en.html
@@ -219,6 +219,38 @@
       </script>
     </section>
 
+    <!--(formerly) Slide 19-->
+    <section class="slide title" data-toc data-markdown>
+      <script type="text/template">
+        #LET'S GET CODING!
+      </script>
+    </section>
+
+    <!--(formerly) Slide 20-->
+    <section class="slide centered" data-markdown>
+      <script type="text/template">
+        # Texting with Ruby
+        ##Go to <strong><a href="https://repl.it">repl.it</a></strong> and search for 'ruby'
+
+        ![ruby editor](framework/img/workshop/replit.png)
+      </script>
+    </section>
+
+    <!--(formerly) Slide 21-->
+    <section class="slide" data-markdown>
+      <script type="text/template">
+        # Say Hello!
+
+        ```ruby
+        puts "Hello World"  #Says Hello (this is a comment)
+        ```
+
+        ![ruby editor](framework/img/workshop/textmsg.png)
+
+      </script>
+    </section>
+
+
     <!--Slide 14-->
     <section class="slide" data-markdown>
       <script type="text/template">
@@ -254,96 +286,6 @@
       </script>
     </section>
 
-    <!--Slide 16-->
-    <section class="slide" data-markdown>
-      <script type="text/template">
-        #Mystery Box
-
-        A <strong>variable</strong> is like a box! It stores information for us.
-
-        We can store <strong>strings</strong> or <strong>integers</strong> inside of <strong>variables</strong>.
-
-        ![variables](framework/img/workshop/variables.png)
-
-        ---
-        <div class="dropdown">
-          <button class="dropbtn">Attributions</button>
-          <div class="dropdown-content">
-            <a href="https://pixabay.com/en/box-open-cardboard-box-cardboard-152428/">Box image</a>
-          </div>
-
-      </script>
-    </section>
-
-    <!--Slide 17-->
-    <section class="slide" data-markdown>
-      <script type="text/template">
-        #Stay Sharp!
-
-        Define box as an integer.
-
-        * Jump box times<!-- .element: class="delayed" -->
-        * Wave box times<!-- .element: class="delayed" -->
-        * Clap box times<!-- .element: class="delayed" -->
-
-        Define box as a string.<!-- .element: class="delayed" -->
-
-        * Say "My favourite ice cream is box"<!-- .element: class="delayed" -->
-        * Say "Tell box I found the box that was missing last box"<!-- .element: class="delayed" -->
-
-      </script>
-    </section>
-
-    <!--Slide 18-->
-    <section class="slide" data-markdown>
-      <script type="text/template">
-        #Conditionals
-
-        <strong>Conditionals</strong> are either <strong>true</strong> or <strong>false</strong>.
-
-        <strong>IF</strong> it is a school day... wake up at 7:00.
-
-        <strong>ELSE</strong>... sleep in.
-
-        <p style="color:#8b31e0">Create your own!</p><!-- .element: class="delayed" -->
-        <p style="color:#8b31e0">IF ... </p><!-- .element: class="delayed" -->
-        <p style="color:#8b31e0">ELSE ... </p><!-- .element: class="delayed" -->
-
-
-      </script>
-    </section>
-
-    <!--Slide 19-->
-    <section class="slide title" data-toc data-markdown>
-      <script type="text/template">
-        #LET'S GET CODING!
-      </script>
-    </section>
-
-    <!--Slide 20-->
-    <section class="slide centered" data-markdown>
-      <script type="text/template">
-        # Texting with Ruby
-        ##Go to <strong><a href="https://repl.it">repl.it</a></strong> and search for 'ruby'
-
-        ![ruby editor](framework/img/workshop/replit.png)
-      </script>
-    </section>
-
-    <!--Slide 21-->
-    <section class="slide" data-markdown>
-      <script type="text/template">
-        # Say Hello!
-
-        ```ruby
-        puts "Hello World"  #Says Hello (this is a comment)
-        ```
-
-        ![ruby editor](framework/img/workshop/textmsg.png)
-
-      </script>
-    </section>
-
     <!--Slide 22-->
     <section class="slide" data-markdown>
       <script type="text/template">
@@ -370,7 +312,47 @@
       </script>
     </section>
 
-    <!--Slide 23-->
+    <!--Slide 16-->
+    <section class="slide" data-markdown>
+      <script type="text/template">
+        #Mystery Box
+
+        A <strong>variable</strong> is like a box! It stores information for us.
+
+        We can store <strong>strings</strong> or <strong>integers</strong> inside of <strong>variables</strong>.
+
+        ![variables](framework/img/workshop/variables.png)
+
+        ---
+        <div class="dropdown">
+          <button class="dropbtn">Attributions</button>
+          <div class="dropdown-content">
+            <a href="https://pixabay.com/en/box-open-cardboard-box-cardboard-152428/">Box image</a>
+          </div>
+
+      </script>
+    </section>
+
+    <!--Slide 17-->
+    <section class="slide" data-markdown>
+      <script type="text/template">
+        #Stay Sharp!
+
+        Define **box** as an integer.
+
+        * Jump box times<!-- .element: class="delayed" -->
+        * Wave box times<!-- .element: class="delayed" -->
+        * Clap box times<!-- .element: class="delayed" -->
+
+        Define box as a string.<!-- .element: class="delayed" -->
+
+        * Say "My favourite ice cream is box"<!-- .element: class="delayed" -->
+        * Say "Tell box I found the box that was missing last box"<!-- .element: class="delayed" -->
+
+      </script>
+    </section>
+
+    <!--(formerly) Slide 23-->
     <section class="slide" data-markdown>
       <script type="text/template">
         # Ask a Question
@@ -395,7 +377,7 @@
       </script>
     </section>
 
-    <!--Slide 24-->
+    <!--(formerly) Slide 24-->
     <section class="slide" data-markdown>
       <script type="text/template">
         # Which One?
@@ -418,6 +400,25 @@
       </script>
     </section>
 
+    <!--Slide 18-->
+    <section class="slide" data-markdown>
+      <script type="text/template">
+        #Conditionals
+
+        <strong>Conditionals</strong> are either <strong>true</strong> or <strong>false</strong>.
+
+        <strong>if</strong> it is a school day... wake up at 7:00.
+
+        <strong>else</strong>... sleep in.
+
+        <p style="color:#00a076">Create your own!</p><!-- .element: class="delayed" -->
+        <p style="color:#00a076">if ... </p><!-- .element: class="delayed" -->
+        <p style="color:#00a076">else ... </p><!-- .element: class="delayed" -->
+
+
+      </script>
+    </section>
+
     <!--Slide 25-->
     <section class="slide" data-markdown>
       <script type="text/template">
@@ -430,7 +431,7 @@
         >   greater than
         <=  less than or equal to
         >=  greater than or equal to
-        ==  equal to
+        ==  equal to (is the same as)
         ```
 
         For Example:
@@ -448,12 +449,12 @@
       <script type="text/template">
         # Create a Condition
 
-        Write an IF statement:
+        Write an **if** statement:
 
         ```ruby
         puts "What is your name?"  #Ask for user's name
         name = gets.chomp.downcase  #Get answer and make all letters lowercase
-        if name == "bob"  #Make a condition for IF the answer is bob
+        if name == "bob"  #Make a condition for *if* the answer is bob
           puts "WHAAAAT! We have the same name!"  #Say something if this is TRUE
         end
         ```
@@ -519,10 +520,10 @@
         * Ask the user to guess<!-- .element: class="delayed" -->
         * Get their answer<!-- .element: class="delayed" -->
         * Switch their answer to an integer<!-- .element: class="delayed" -->
-        * Create an IF condition if they guess too low<!-- .element: class="delayed" -->
-        * Create an ELSIF condition if they guess too high<!-- .element: class="delayed" -->
-        * Create an ELSE condition for the correct guess (only other option)<!-- .element: class="delayed" -->
-        * End your IF, ELSE statement<!-- .element: class="delayed" -->
+        * Create an if condition if they guess too low<!-- .element: class="delayed" -->
+        * Create an elsif condition if they guess too high<!-- .element: class="delayed" -->
+        * Create an else condition for the correct guess (only other option)<!-- .element: class="delayed" -->
+        * End your if, else statement<!-- .element: class="delayed" -->
 
       </script>
     </section>
@@ -532,7 +533,7 @@
       <script type="text/template">
         # Guessing Game: Solution
 
-        Create an IF statement:
+        Create an **if** statement:
 
         ```ruby
         number = 3  #Choose number
@@ -559,7 +560,7 @@
         Replace:
 
         ```ruby
-        number = rand(1..10)
+        number = rand 1..10
         ```
         Chooses a random number between 1 and 10
 
@@ -584,7 +585,7 @@
         5.times do  #Loop the program 5 times
 
 
-          *JAZZ HANDS*
+          jazz_hands!
 
 
         end  #End the loop
@@ -600,7 +601,7 @@
         # Guessing Game: Loop
 
         ```ruby
-        number = rand(1..10)  #Keep this at the top
+        number = rand 1..10  #Keep this at the top
 
         10.times do  #Loop the program for 10 rounds
 
@@ -651,7 +652,7 @@
         * Set up the story! Use ```puts "String"``` (add a pause with ```sleep 2```)
         * Ask a question with two options: A or B
         * Get the answer
-        * Create an IF, ELSIF statement:
+        * Create an **if**, **elsif** statement:
           * ```if choice == "A"``` or ```if choice.include? "A"```
           * Make something happen if they choose A
           * Create an ```elsif``` condition if they choose B
